# prompt-wars-main

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  db.py  deps.py  errors.py  logging_config.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  checkin.py  history.py  profile.py  realtime.py
backend/app/services/: __init__.py  checkin_service.py  crisis.py  form_scorer.py  fusion.py  history.py  notifier.py  openai_client.py  profiles.py  realtime_profiles.py  reflection.py
backend/app/services/signals/: __init__.py  audio_tone.py  base.py  facial.py  transcript.py
backend/tests/: conftest.py  fakes.py  test_checkin_endpoints.py  test_crisis.py  test_form_scorer.py  test_fusion.py  test_notifier.py  test_profile_history.py  test_realtime_profiles.py  test_signals.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.module.css  AppHeader.tsx  CalmingSession.module.css  CalmingSession.test.tsx  CalmingSession.tsx  CrisisScreen.module.css  CrisisScreen.tsx  Disclaimer.module.css  Disclaimer.tsx  FormCheckin.module.css  FormCheckin.test.tsx  FormCheckin.tsx  ModeSelect.module.css  ModeSelect.tsx  ParentSettings.module.css  ParentSettings.tsx  ResultCard.module.css  ResultCard.test.tsx  ResultCard.tsx  TrendDashboard.module.css  TrendDashboard.tsx  VoiceCheckin.module.css  VoiceCheckin.tsx  a11y.test.tsx
frontend/src/hooks/: useCheckins.ts  useCountdown.ts  useVoiceSession.test.ts  useVoiceSession.ts
frontend/src/lib/: capture.test.ts  capture.ts  format.test.ts  format.ts
frontend/src/styles/: tokens.css
frontend/src/test/: setup.ts
