[project]
name = "sahaay-backend"
version = "0.1.0"
description = "Sahaay - supportive wellbeing check-in companion for exam-stage students"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "email-validator>=2.1",
    "sqlmodel>=0.0.22",
    "openai>=1.66",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
    "cryptography>=43.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff: lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # security (bandit)
    "SIM", # simplify
    "RET", # return
    "ANN", # annotations
]

[tool.ruff.lint.per-file-ignores]
# Tests use assert (S101) and benefit from terser signatures.
"tests/**" = ["S101", "ANN401"]

# ---------------------------------------------------------------------------
# Mypy: strict everywhere
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
# slowapi ships no py.typed marker; it is the only untyped dependency.
module = ["slowapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Route handlers use slowapi's (untyped) @limiter.limit decorator; everything
# else in these modules remains strictly typed.
module = ["app.routers.*"]
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:app.*"]
